--- a/css/styles.less
+++ b/css/styles.less
@@ -78,8 +78,21 @@ body{
     }
 }
 
+@media screen and (min-width: 320px){
+    body section .paneldrcha{
+        padding: 2rem 1rem 15rem;
+    }
+}
+@media screen and (min-width: 1024px){
+    body section .paneldrcha{
+        padding: 2rem 4rem 15rem;
+    }
+}
 @media screen and (min-width: 1440px){
     section{
         width: 75%;
+    }
+    body section .paneldrcha{
+        padding: 2rem 1rem 15rem;
     }
 }
