--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,21 @@ body section .paneldrcha .skills ul li {
   font-weight: bold;
   font-family: "Montserrat";
 }
+@media screen and (min-width: 320px) {
+  body section .paneldrcha {
+    padding: 2rem 1rem 15rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  body section .paneldrcha {
+    padding: 2rem 4rem 15rem;
+  }
+}
 @media screen and (min-width: 1440px) {
   section {
     width: 75%;
+  }
+  body section .paneldrcha {
+    padding: 2rem 1rem 15rem;
   }
 }
